:sparkles: start with accordion

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 layout: "layouts/home.html"
 title: "W52 #13 - FAQ Accordion"
 
+heading: "faq"
+
 questions:
   - id: "1"
     question: "How many team members can I invite?"
@@ -27,6 +29,7 @@ questions:
       Chat and email support is available 24/7. Phone lines are open during normal business hours.
 
 image_woman: "illustration-woman-online"
+image_woman_alt: "a person watching a screen"
 image_box: "illustration-box"
 bg_image: "bg-pattern"
 ---
